@@ -7,6 +7,7 @@ import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.FileVisitResult;
+import java.nio.file.FileVisitor;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
@@ -15,19 +16,17 @@ import java.util.Objects;
 import java.util.stream.Collectors;
 
 // Taken from java example. So verbose!
-class TreeCopier implements TreeVisitor {
+class TreeCopier implements FileVisitor<Path> {
   private static final String PROJECT_FILE = ".project";
   private static final String STRING_TO_REPLACE = "PROJECT_NAME";
 
   private final Path source;
   private final Path target;
-  private int numFilesCopied;
   private String projectFileContents;
 
   TreeCopier(Path source, Path target) {
     this.source = source;
     this.target = target;
-    this.numFilesCopied = 0;
     getProjectFileContents();
   }
 
@@ -38,7 +37,7 @@ class TreeCopier implements TreeVisitor {
              new InputStreamReader(inputStream, StandardCharsets.UTF_8))) {
       projectFileContents = reader.lines().collect(Collectors.joining(System.lineSeparator()));
     } catch (IOException e) {
-      System.err.println("Error reading project file contents: " + e.getMessage());
+      System.err.println(PropertiesLoader.get("fileReadError") + ": " + e.getMessage());
     }
   }
 
@@ -57,16 +56,20 @@ class TreeCopier implements TreeVisitor {
 
   @Override
   public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
-    if (file.getFileName().toString().equals(PROJECT_FILE)) {
+    Path currentFile = file.getFileName();
+    Path parentPath = file.getParent();
+    boolean shouldSkip = currentFile == null || parentPath == null;
+    Path parentFile = shouldSkip ? null : parentPath.getFileName();
+
+    if (!shouldSkip && currentFile.toString().equals(PROJECT_FILE) && parentFile != null) {
       Path newFile = target.resolve(source.relativize(file));
       Files.createFile(newFile);
       String content = projectFileContents.replace(STRING_TO_REPLACE,
-          newFile.getParent().getFileName().toString());
-      Files.write(newFile, content.getBytes());
+          String.format("%s_%s", parentFile, target.getFileName()));
+      Files.writeString(newFile, content, StandardCharsets.UTF_8);
     } else {
       Files.copy(file, target.resolve(source.relativize(file)),
           StandardCopyOption.REPLACE_EXISTING);
-      numFilesCopied++;
     }
     return FileVisitResult.CONTINUE;
   }
@@ -78,11 +81,6 @@ class TreeCopier implements TreeVisitor {
 
   @Override
   public FileVisitResult visitFileFailed(Path file, IOException exc) throws IOException {
-    String error = String.format("Unable to copy: %s: %s%n", file, exc);
-    throw new IOException(error);
-  }
-
-  public int getNumFilesCopied() {
-    return numFilesCopied;
+    throw new IOException(String.format(PropertiesLoader.get("copyError"), file), exc);
   }
 }
